ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-realm: Authentication Required
    nginx.ingress.kubernetes.io/auth-secret: ingress-auth
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  name: demo-ui
  namespace: nuclio
spec:
  rules:
  - host: demo.iguazio.app.xslfcfqccqjutqdf.staging.sbx.iguazio.com
    http:
      paths:
      - backend:
          serviceName: demo-taxi-demo
          servicePort: 5555
        path: /
status:
  loadBalancer:
    ingress:
    - {}
